--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
+    "date-fns": "^3.6.0",
+    "next": "14.1.4",
     "react": "^18",
+    "react-datepicker": "^6.6.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-lorem-ipsum": "^1.4.10",
+    "rsuite": "^5.58.1"
   }
 }
